fix: review content overflow problem fix

--- a/public/css/review.css
+++ b/public/css/review.css
@@ -433,6 +433,9 @@ button {
 
 .review_content p {
   color: #000;
+  word-wrap: break-word;
+  height: 100%;
+  overflow: hidden;
 }
 
 .likeBtn,
